Parti body fini

--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/demo.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/demo.html
@@ -2,21 +2,96 @@
 <!-- L'attribut de la balise html -> lang="fr" permet au navigateur/moteur de recherche de reconnaître la langue avec laquelle on travaillera, 
     par exemple ci-dessous lang="fr" alors ont travaillera en français -->
 <html lang="fr">
-<head>
+  <head>
     <!-- Titre, qui s'affiche dans l'onglet -->
     <title>LeRestaurant, Restaurant fruit de mer sur Montpellier</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- La meta ci-dessous permet de mettre une description, sous le lien de notre site web dans lors du référencement -->
-    <meta name="description" content="Voici une courte description.">
+    <meta name="description" content="Voici une courte description." />
     <!-- La meta ci-dessous étais utiliser par les moteurs de recherche pour savoir les thématiques de la page -->
-    <meta name="keywords" content="Restaurant,Montpellier,Fruit de mer">
+    <meta name="keywords" content="Restaurant,Montpellier,Fruit de mer" />
     <!-- Le Favicon, permet d'afficher une image dans l'onglet du navigateur -->
     <link rel="icon" href="images/justdoit_shialaboeuf.jpg" />
-</head>
-<body>
-    <p>Hello WORLD !!!!</p>
-    
-</body>
+  </head>
+
+  <body>
+    <h1>Mon titre</h1>
+
+    <!-- balise "em" -> italique, balise "strong" -> en gras, balise "br" saut à la ligne -->
+    <p>
+      <em>Lorem ipsum </em><strong>dolor</strong> sit amet, consectetur
+      adipisicing elit. Corrupti corporis, animi minus culpa optio incidunt hic
+      nesciunt, beatae in impedit unde. Nesciunt, dolorem labore. Laudantium non
+      illo officia. Atque, facilis.<br />
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque laudantium
+      voluptas obcaecati expedita suscipit accusantium quam hic doloremque
+      maiores accusamus repellat, architecto beatae incidunt perferendis,
+      facilis vitae, minima delectus dolores. Lorem ipsum dolor sit, amet
+      consectetur adipisicing elit. At hic ullam omnis iste laborum quaerat
+      doloribus. Architecto ipsum, magnam ducimus rerum tempore rem ipsam facere
+      libero voluptatum amet corporis eligendi.
+    </p>
+
+    <!-- Balise "ul" -> Liste désordonnée, "li" -> liste item -->
+    <ul>
+      <li>Premier élément</li>
+      <li>Second élément</li>
+    </ul>
+
+    <!-- Balise "ol" -> Liste ordonnée, "li" -> liste item -->
+    <ol>
+      <li>
+        Préparation du poulet
+        <ul>
+          <li>Sortez le poulet du frigo</li>
+          <li>Découper le poulet en tranche</li>
+          <li>Mettez le poulet au four</li>
+        </ul>
+      </li>
+
+      <li>Second élément</li>
+    </ol>
+
+    <!-- Entity -->
+    <a href="https://developer.mozilla.org/fr/docs/Glossary/Entity">Entity</a>
+
+    <p>&copy;, &#8212; ou &#x2014;, &amp;</p>
+
+    <!-- Espace insécable "&nbsp;" -->
+    <p>Vous &nbsp; devez écrire un &lt; h1 &gt; pour représenter un titre</p>
+
+    <hr />
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas autem eos,
+      sed vero adipisci totam obcaecati, soluta corporis perferendis animi
+      provident esse, perspiciatis ea ratione quos laudantium deleniti earum
+      necessitatibus!
+    </p>
+
+    <h2>Mon second titre</h2>
+
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis ut ad
+      reiciendis tempore placeat ab quia, ea amet! Fugit ratione nostrum iure
+      et. Fuga vitae laborum, sit beatae sapiente atque!
+    </p>
+
+    <h3>Mon troisième titre</h3>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+      consequuntur cupiditate voluptatibus, repellat velit aspernatur hic
+      doloremque asperiores amet debitis fugiat nisi animi libero officiis ipsum
+      molestias dicta ullam! Incidunt.
+    </p>
+
+    <h4>Mon quatrième titre</h4>
+
+    <h5>Mon cinquième titre</h5>
+
+    <p>Hello WORLD !!!</p>
+  </body>
 </html>
