Ajout la fonctionnalité de voir une image

--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/index.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/index.html
@@ -11,12 +11,32 @@
   <body>
     <h1>Restaurant Le Fiasco</h1>
 
+    <!-- Mettre une image -->
+
+    <img
+      src="images/fiasco-bg.jpg"
+      alt="Photo du burger de Fiasco"
+      width="200"
+      height="100"
+    />
+    <br>
+
+    <a href="images/justdoit_shialaboeuf.jpg" target="_blank">
+      <img
+        src="images/justdoit_shialaboeuf.jpg"
+        alt="Image justdoit_shialaboeuf"
+        width="500"
+        height="300"
+      />
+    </a>
+
     <!-- Lien interne #cuisine et menu.html#plats-chauds -->
     <p>
-      Lorem ipsum dolor sit amet <a href="#cuisine">cuisine</a> adipisicing elit. Quisquam tempora
-      sequi excepturi asperiores reprehenderit, accusamus aspernatur debitis eum
-      une large sélection de <a href="menu.html#plats-chauds">plats chauds</a> modi soluta dicta minima est voluptatem laborum tempore,
-      aperiam itaque beatae!
+      Lorem ipsum dolor sit amet <a href="#cuisine">cuisine</a> adipisicing
+      elit. Quisquam tempora sequi excepturi asperiores reprehenderit, accusamus
+      aspernatur debitis eum une large sélection de
+      <a href="menu.html#plats-chauds">plats chauds</a> modi soluta dicta minima
+      est voluptatem laborum tempore, aperiam itaque beatae!
     </p>
 
     <h2>Historique</h2>
