--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu du Restaurant Le Fiasco sur Montpellier</title>
+
+    <!-- Un peu de CSS juste pour mieux mettre en avant le tableau -->
+    <style>
+      table,
+      td {
+        border: 1px solid #333;
+      }
+
+      thead,
+      tfoot {
+        background-color: #333;
+        color: #fff;
+      }
+    </style>
   </head>
   <body>
     <h1>Le menu</h1>
@@ -14,6 +28,84 @@
       <li>Entrée 2</li>
       <li>Entrée 3</li>
     </ul>
+
+    <!-- Les Tables : un tableau-->
+    <table>
+      <thead>
+        <tr>
+          <th>Plat</th>
+          <th>Prix</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Steak Frite</th>
+          <td>5€</td>
+        </tr>
+        <tr>
+          <th>Steak</th>
+          <td>3€</td>
+        </tr>
+        <tr>
+          <th>Frite</th>
+          <td>2€</td>
+        </tr>
+        <tr>
+          <th>Dessert</th>
+        </tr>
+        <tr>
+          <th>Mousse au chocolat</th>
+          <td>3 €</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="2"><em>Tous les prix sont indiqué TTC</em></td>
+        </tr>
+      </tfoot>
+    </table>
+
+    <!-- Excercie Tableau -->
+
+    <table>
+      <thead>
+        <tr>
+          <th>Nom du produit</th>
+          <th>Prix HT</th>
+          <th>Quantité</th>
+          <th>Prix TTC</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Stylo</td>
+          <td>1 €</td>
+          <td>10</td>
+          <td>70 €</td>
+        </tr>
+        <tr>
+          <td>Verre</td>
+          <td>5 €</td>
+          <td>10</td>
+          <td>110 €</td>
+        </tr>
+        <tr>
+          <td>Livre</td>
+          <td>10 €</td>
+          <td>10</td>
+          <td>160 €</td>
+        </tr>
+        <tr>
+          <td colspan="2" rowspan="2"></td>
+          <th>Total</th>
+          <td>100 €</td>
+        </tr>
+        <tr>
+          <th>Total TTC</th>
+          <td>100 €</td>
+        </tr>
+      </tbody>
+    </table>
 
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo cupiditate
@@ -92,7 +184,7 @@
     </ul>
 
     <p>
-    <!-- Lien relatif-->
+      <!-- Lien relatif-->
 
       <a href="index.html">Revenir au menu</a>
 
