Ajout iframe : menu.html dans la page index.html + google maps

--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/index.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/index.html
@@ -11,6 +11,34 @@
   <body>
     <h1>Restaurant Le Fiasco</h1>
 
+    <!-- iframe -->
+
+    <!-- iframe Vidéo Youtube -->
+    <!--
+      <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/TuUVuW0Xb1M?si=FSHSGBHFHIpxyy5j"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe> -->
+
+    <!-- iframe Emplacement Google Maps -->
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d21013.50901186406!2d2.161907999780293!3d48.826002185198845!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e67c81ca076c4f%3A0xe9310f17b914c51c!2sH%C3%B4tel%2C%20Restaurants%20%26%20Spa%20Les%20Etangs%20de%20Corot%20-%20Maison%20Relais%20%26%20Ch%C3%A2teaux!5e0!3m2!1sfr!2sfr!4v1698084472832!5m2!1sfr!2sfr"
+      width="600"
+      height="450"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+
+    <!-- iframe page du projet menu.html de LeRestaurant Fiasco -->
+    <iframe src="menu.html" width="800" height="600" frameborder="0"></iframe>
+
     <!-- Mettre une image -->
 
     <img
@@ -19,7 +47,7 @@
       width="200"
       height="100"
     />
-    <br>
+    <br />
 
     <a href="images/justdoit_shialaboeuf.jpg" target="_blank">
       <img
