--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu.html
@@ -64,7 +64,7 @@
         </tr>
       </tfoot>
     </table>
-
+    <br />
     <!-- Excercie Tableau -->
 
     <table>
@@ -186,7 +186,8 @@
     <p>
       <!-- Lien relatif-->
 
-      <a href="index.html">Revenir au menu</a>
+      <!-- _parent charge toute la page parent -->
+      <a href="index.html" target="_parent">Revenir au menu</a>
 
       <!-- Lien externe -->
       <a href="https://grafikart.fr/cursus" target="_blank">Tuto grafikart</a>
