Add new meta HTML

--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/index.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fiasco, Restaurant fruit de mer sur Montpellier</title>
+
+    <meta charset="UTF-8" />
+    <meta name="description" content="LeRestaurant ...........">
+    <meta name="keywords" content="Restaurant,Montpellier,Fruit de mer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Le Favicon, permet d'afficher une image dans l'onglet du navigateur -->
     <link rel="icon" href="images/justdoit_shialaboeuf.jpg" />
   </head>
 
   <body>
-
     <!-- Balise nav (navigation)-> permet de mettre plusieurs liens vers les pages de notre site -->
     <nav>
       <ul>
@@ -25,8 +27,8 @@
     <!-- iframe -->
 
     <!-- iframe Vidéo Youtube -->
-    
-      <iframe
+
+    <iframe
       width="560"
       height="315"
       src="https://www.youtube.com/embed/TuUVuW0Xb1M?si=FSHSGBHFHIpxyy5j"
@@ -34,7 +36,7 @@
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen
-    ></iframe> 
+    ></iframe>
 
     <!-- iframe Emplacement Google Maps -->
     <iframe
@@ -73,22 +75,23 @@
     <!-- Lien interne #cuisine et menu.html#plats-chauds -->
 
     <div class="bigtext">
-    <p>
-      <span>Lorem ipsum</span> dolor sit amet <a href="#cuisine">cuisine</a> adipisicing
-      elit. Quisquam tempora sequi excepturi asperiores reprehenderit, accusamus
-      aspernatur debitis eum une large sélection de
-      <a href="menu.html#plats-chauds">plats chauds</a> modi soluta dicta minima
-      est voluptatem laborum tempore, aperiam itaque beatae!
-    </p>
+      <p>
+        <span>Lorem ipsum</span> dolor sit amet
+        <a href="#cuisine">cuisine</a> adipisicing elit. Quisquam tempora sequi
+        excepturi asperiores reprehenderit, accusamus aspernatur debitis eum une
+        large sélection de
+        <a href="menu.html#plats-chauds">plats chauds</a> modi soluta dicta
+        minima est voluptatem laborum tempore, aperiam itaque beatae!
+      </p>
 
-    <p>
-      Lorem ipsum dolor sit amet <a href="#cuisine">cuisine</a> adipisicing
-      elit. Quisquam tempora sequi excepturi asperiores reprehenderit, accusamus
-      aspernatur debitis eum une large sélection de
-      <a href="menu.html#plats-chauds">plats chauds</a> modi soluta dicta minima
-      est voluptatem laborum tempore, aperiam itaque beatae!
-    </p>
-  </div>
+      <p>
+        Lorem ipsum dolor sit amet <a href="#cuisine">cuisine</a> adipisicing
+        elit. Quisquam tempora sequi excepturi asperiores reprehenderit,
+        accusamus aspernatur debitis eum une large sélection de
+        <a href="menu.html#plats-chauds">plats chauds</a> modi soluta dicta
+        minima est voluptatem laborum tempore, aperiam itaque beatae!
+      </p>
+    </div>
 
     <h2>Historique</h2>
 
