--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Menu du Restaurant Le Fiasco sur Montpellier</title>
+
+    <meta charset="UTF-8" />
+    <meta name="description" content="LeRestaurant ..........." />
+    <meta name="keywords" content="Restaurant,Montpellier,Fruit de mer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Un peu de CSS juste pour mieux mettre en avant le tableau -->
     <style>
@@ -20,6 +23,15 @@
     </style>
   </head>
   <body>
+    <!-- Balise nav (navigation)-> permet de mettre plusieurs liens vers les pages de notre site -->
+    <nav>
+      <ul>
+        <li><a href="index.html" title="Accueil">Accueil</a></li>
+        <li><a href="menu.html" title="Menu">Menu</a></li>
+        <li><a href="contact.html" title="Contact">Contact</a></li>
+      </ul>
+    </nav>
+
     <h1>Le menu</h1>
 
     <h2>Entrée</h2>
