--- a/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu/entree_1.html
+++ b/Developpeur/HTML-CSS-JavaScript/001-Ma_premiere_page/menu/entree_1.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Entrée 1 du Restaurant Le Fiasco sur Montpellier</title>
+
+    <meta charset="UTF-8">
+    <meta name="description" content="LeRestaurant ...........">
+    <meta name="keywords" content="Restaurant,Montpellier,Fruit de mer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
   </head>
   <body>
     <h1>Entrée 1</h1>
 
     <h2>Ingrédients</h2>
-
     <ul>
       <li>Ingrédients 1</li>
       <li>Ingrédients 2</li>
