Cablage avec lien css, style.css

--- a/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/index.html
+++ b/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Restaurant</title>
     <meta name="description" content="Un texte descrivant notre Restaurant">
+
+    <!-- Lien vers le fichier styles.css,
+        l'attribut de type "rel" qui permet de spécifié le type de document qu'on a "stylesheet" = feuille de style-->
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
     <header>
