Ajout style CSS pour test les règle CSS

--- a/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/index.html
+++ b/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/index.html
@@ -9,11 +9,11 @@
     <!-- Lien vers le fichier styles.css,
         l'attribut de type "rel" qui permet de spécifié le type de document qu'on a "stylesheet" = feuille de style-->
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
 <body>
     <header>
-        <h1>Le restaurant Fiasco</h1>
+        <h1 class="title-big">Le restaurant Fiasco</h1>
         <nav>
             <a href="index.html" title="Accueil">Accueil</a>
             <a href="menu.html" title="Voir le menu">Menu</a>
