--- a/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/index.html
+++ b/Developpeur/HTML-CSS-JavaScript/002-Projet_restaurant/index.html
@@ -12,9 +12,9 @@
 
 </head>
 <body>
-    <header>
-        <h1 class="title-big">Le restaurant Fiasco</h1>
-        <nav>
+    <header class="header">
+        <h1 class="header-title">Le restaurant Fiasco</h1>
+        <nav class="header-nav">
             <a href="index.html" title="Accueil">Accueil</a>
             <a href="menu.html" title="Voir le menu">Menu</a>
             <a href="contact.html" title="Nous contacter">Contact</a>
@@ -22,7 +22,7 @@
         <img src="img/banniere_restaurant_fiasco.jpg" width="1260" height="588" alt="Photo du restaurant Fiaco">
     </header>
     
-    <article>
+    <article class="main">
 
         <h2>A propos du restaurant</h2>
 
@@ -72,7 +72,7 @@
 
     </article>
 
-    <footer>
+    <footer class="footer">
         <address>123 Rue de la démonstration </address>
     </footer>
 </body>
